--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,6 @@
-include README
-include LICENSE
-include CHANGES.*
+include *.txt *.cfg *.rst 
+
+recursive-include docs *
+recursive-include src *
+
+global-exclude *pyc .DS_Store .installed.cfg
