--- a/buildout.cfg
+++ b/buildout.cfg
@@ -13,4 +13,9 @@ eggs =
 zc.buildout = 2.2.1
 zc.recipe.egg = 2.0.1
 setuptools = 1.1.7
-
+Jinja2 = 2.7.1
+MarkupSafe = 0.18
+Pygments = 1.6
+Sphinx = 1.1.3
+docutils = 0.11
+zest.releaser = 3.47
